--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-Hello Everyone!..........
-This is for testing Purpose
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Cab Booking Application</title>
+</head>
+<body>
+<h3>Welcome To Ola Cabs</h3>
+<a href="first.html" target="_blank">Login</a>
+<br>
+<br>
+<a href="Second.html">Cab Types</a>
+</body>
+</html>
