--- a/First.html
+++ b/First.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Login Page</h1>
 <br>
-<form>
+<form action="Second.html">
 <label for="name" >Enter Your Mobile Number :</label>
 <input type="number" name="Mobile Number :" id="Mobile Number :" required placeholder="Enter Your Mobile Number"><br><br>
 <label for="Password">Enter Your Password   :</label>
