--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="first.html" target="_blank">Login</a>
 <br>
 <br>
-<a href="Second.html">Cab Types</a>
+<a href="Second.html">Cab Types</a><br><br>
+  <a href="Third.html">Cab Type Selection</a><br><br>
 </body>
 </html>
