--- a/Booking.html
+++ b/Booking.html
@@ -8,13 +8,13 @@
 <form method="post" action="Last Page.html">
 <h1>Journey Details</h1>
 <label>Journey Date :</label>
-<input type="date" name="Journey Date" min="2021-04-19" max="2021-04-26" ><br><br>
+<input type="date" name="Journey Date" min="2021-04-19" max="2021-04-26"  required><br><br>
 <label>PickUp Time :</label>
 <input type="time" name="PickupTime"><br><br>
 <label>GST   :</label>
 <input type="number" name="gst">
 <br><br>
-Senior Citizen :<input type="radio" name="Senior Citizen" value="Yes">Yes
+Senior Citizen :<input type="radio" name="Senior Citizen" value="Yes" required>Yes
 <input type="radio" name="Senior Citizen" value="No">No
 <br><br>
 Gender:<input type="radio" name="Gender" value="Male">Male
