--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <h3>Welcome To Ola Cabs</h3>
-<a href="first.html" target="_blank">Login</a>
+<a href="Login.html" target="_blank">Login</a>
 <br>
 <br>
-<a href="Second.html">Cab Types</a><br><br>
-  <a href="Third.html">Cab Type Selection</a><br><br>
+<a href="CabDeatils.html">Cab Types</a><br><br>
+<a href="CabSelection.html">Cab Type Selection</a><br><br>
+<a href="Biiking.html">Booking</a><br><br>
 </body>
 </html>
