--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <br>
 <a href="CabDeatils.html">Cab Types</a><br><br>
 <a href="CabSelection.html">Cab Type Selection</a><br><br>
-<a href="Biiking.html">Booking</a><br><br>
+<a href="Booking.html">Booking</a><br><br>
 </body>
 </html>
