--- a/BookingDetails.html
+++ b/BookingDetails.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Booking Details</title>
+    <style>
+        div {
+            text-align: center;
+            margin: 50px 100px 10px 200px;
+            border-style: solid;
+            background-color: darkgrey;
+            width: 400px;
+            height: 450px;
+        }
+    </style>
 </head>
+
 <body>
     <center>
-    <h3>Booking Details</h3>
-    <p id="jdate"></p>
-    <p id="ptime"></p>
-    <p id="fare"></p>
-    <p id="total"></p>
-    <p id="peak"></p>
-    <p id="price"></p>
-    <p id="senior"></p>
-    <p id="finalPrice"></p>
-    <h4>Thank You for Choosing Our Cab Services</h4>
-    <h4>Visit Again....</h4>
-</center>
+
+        <div>
+            <h3>Booking Details</h3>
+            <p id="jdate"></p>
+            <p id="ptime"></p>
+            <p id="fare"></p>
+            <p id="total"></p>
+            <p id="peak"></p>
+            <p id="price"></p>
+            <p id="senior"></p>
+            <p id="finalPrice"></p>
+            <h4>Thank You for Choosing Our Cab Services</h4>
+            <h4>Visit Again....</h4>
+        </div>
+    </center>
 </body>
 <script src="JourneyDetails.js">      
 </script>
+
 </html>
