--- a/CabSelection.html
+++ b/CabSelection.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cab Selection</title>
 </head>
+
 <body>
     <form onsubmit="nextPage()">
-    <center>
-        <h3>Cab Type Selection</h3>
-        <label>Select Cab Type:</label><br><br>
-    <select name="cabtype" id="cabtype">
-    <option disabled>Select CAB Type</option>
-    <option Value="AUTO">Auto</option>
-    <option value="MINI">Mini</option>
-    <option Value="PRIME">Prime</option>
-    </select><br><br>
-    <label>Enter Kms:</label><br><br>
-    <input type="number" id="kms"  required placeholder="Enter Kms" required>
-    <br><br>
-    <button onclick="priceEstimator()">Calculate</button>
-    <p id="demo"></p>
-    <p id="gst"></p>
-    <p id="total"></p>
-    <button style="visibility:hidden" id="continue" type="submit">Continue</button>
-    <button style="visibility:hidden" id="back" type="button" onclick="returnLogin()">Exit</button>
-</center>
-</form>
-            
-<script src="CabSelection.js">    
-</script>
+        <center>
+            <h3>Cab Type Selection</h3>
+            <label>Select Cab Type:</label>
+            <br>
+            <br>
+            <select name="cabtype" id="cabtype">
+                <option disabled>Select CAB Type</option>
+                <option Value="AUTO">Auto</option>
+                <option value="MINI">Mini</option>
+                <option Value="PRIME">Prime</option>
+            </select>
+            <br>
+            <br>
+            <label>Enter Kms:</label>
+            <br>
+            <br>
+            <input type="number" id="kms" required placeholder="Enter Kms" required>
+            <br>
+            <br>
+            <button onclick="priceEstimator()">Calculate</button>
+            <p id="demo"></p>
+            <p id="gst"></p>
+            <p id="total"></p>
+            <button style="visibility:hidden" id="continue" type="submit">Continue</button>
+            <button style="visibility:hidden" id="back" type="button" onclick="returnLogin()">Exit</button>
+        </center>
+    </form>
+
+    <script src="CabSelection.js">    
+    </script>
 </body>
+
 </html>
