--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h3>Welcome To Ola Cabs</h3>
-<a href="Login.html" target="_blank">Login</a>
+  <a href=Login.html>Login</a>
 <br>
 <br>
-<a href="CabDeatils.html">Cab Types</a><br><br>
-<a href="CabSelection.html">Cab Type Selection</a><br><br>
-<a href="Booking.html">Booking</a><br><br>
+  <a href="CabDeatils.html">Cab Types</a><br><br>
+  <a href="CabSelection.html">Cab Selection</a><br><br>
+  <a href="Booking.html">Booking</a><br><br>
 </body>
 </html>
